chainlink.yaml
apiVersion: v1
kind: Service
metadata:
  name: chainlink
  labels:
    app: chainlink
spec:
  clusterIP: None
  selector:
    app: chainlink
  ports:
    - name: listening
      port: 6688
      targetPort: 6688
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chainlink
spec:
  selector:
    matchLabels:
      app: chainlink
  replicas: 1
  template:
    metadata:
      labels:
        app: chainlink
        role: chainlink
        environment: production
    spec:
      containers:
        - name: chainlink
          image: smartcontract/chainlink:1.1.1
          args: ["local", "n", "-p",  "/chainlink/.password", "-a", "/chainlink/.api"]
          ports:
            - containerPort: 6688
          volumeMounts:
            - name: api-volume
              mountPath: /chainlink/.api
              subPath: .api
            - name: password-volume
              mountPath: /chainlink/.password
              subPath: .password
          resources:
            requests:
              cpu: 3000m
              memory: 6000Mi
      volumes:
        - name: api-volume
          secret:
            secretName: api-env
        - name: password-volume
          secret:
            secretName: password-env
